--- a/src/main/resources/views/Reservations.fxml
+++ b/src/main/resources/views/Reservations.fxml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.collections.FXCollections?>
-
 <?import java.lang.String?>
-<Pane xmlns="http://javafx.com/javafx/23.0.1"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="Controllers.ReservationsController"
-      prefWidth="800.0" prefHeight="180.0"
-      style="-fx-background-color: #1c1c1c;">
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+
+<Pane prefHeight="148.0" prefWidth="800.0" style="-fx-background-color: #1c1c1c;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReservationsController">
 
     <children>
         <!-- ARRIVAL -->
-        <Label layoutX="30" layoutY="20" text="ARRIVAL" style="-fx-text-fill: white; -fx-font-weight: bold;" />
+        <Label layoutX="30" layoutY="20" style="-fx-text-fill: white; -fx-font-weight: bold;" text="ARRIVAL" />
         <DatePicker fx:id="arrivalDate" layoutX="30" layoutY="45" prefWidth="160" />
 
         <!-- DEPARTURE -->
-        <Label layoutX="210" layoutY="20" text="DEPARTURE" style="-fx-text-fill: white; -fx-font-weight: bold;" />
+        <Label layoutX="210" layoutY="20" style="-fx-text-fill: white; -fx-font-weight: bold;" text="DEPARTURE" />
         <DatePicker fx:id="departureDate" layoutX="210" layoutY="45" prefWidth="160" />
 
         <!-- PAYMENT METHOD -->
-        <Label layoutX="390" layoutY="20" text="PAYMENT METHOD" style="-fx-text-fill: white; -fx-font-weight: bold;" />
+        <Label layoutX="390" layoutY="20" style="-fx-text-fill: white; -fx-font-weight: bold;" text="PAYMENT METHOD" />
         <ComboBox fx:id="paymentMethod" layoutX="390" layoutY="45" prefWidth="160">
             <items>
                 <FXCollections fx:factory="observableArrayList">
@@ -33,8 +32,6 @@
         </ComboBox>
 
         <!-- BOOK BUTTON -->
-        <Button fx:id="bookButton" text="BOOK" layoutX="570" layoutY="45" prefWidth="120"
-                style="-fx-background-color: white; -fx-text-fill: black; -fx-font-weight: bold;"
-                onAction="#handleBook"/>
+        <Button fx:id="bookButton" layoutX="570" layoutY="45" onAction="#handleBook" prefWidth="120" style="-fx-background-color: white; -fx-text-fill: black; -fx-font-weight: bold;" text="BOOK" />
     </children>
 </Pane>
