--- a/src/main/resources/views/ReservationsHistory.fxml
+++ b/src/main/resources/views/ReservationsHistory.fxml
@@ -1,36 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane xmlns="http://javafx.com/javafx/23.0.1"
-      xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="Controllers.ReservationsHistoryController"
-      prefWidth="800.0" prefHeight="600.0"
-      style="-fx-background-color: #ffffff;">
+<Pane prefHeight="522.0" prefWidth="800.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ReservationsHistoryController">
 
     <children>
         <!-- Titulli -->
-        <Label layoutX="320.0" layoutY="20.0" text="Rezervimet"
-               style="-fx-font-size: 24; -fx-font-weight: bold; -fx-text-fill: #2c3e50;" />
+        <Label layoutX="320.0" layoutY="20.0" style="-fx-font-size: 24; -fx-font-weight: bold; -fx-text-fill: #2c3e50;" text="Rezervimet" />
 
         <!-- TableView për listën e rezervimeve -->
-        <TableView fx:id="reservationTable" layoutX="50.0" layoutY="70.0"
-                   prefWidth="700.0" prefHeight="400.0">
+        <TableView fx:id="reservationTable" layoutX="56.0" layoutY="71.0" prefHeight="400.0" prefWidth="700.0">
             <columns>
-                <TableColumn fx:id="colRoom" text="Room ID" prefWidth="100.0" />
-                <TableColumn fx:id="colUser" text="Customer ID" prefWidth="100.0" />
-                <TableColumn fx:id="colDate" text="Data (Check-in/Check-out)" prefWidth="200.0" />
-                <TableColumn fx:id="colStatus" text="Statusi" prefWidth="100.0" />
-                <TableColumn fx:id="colActions" text="Veprime" prefWidth="150.0" />
+                <TableColumn fx:id="colRoom" prefWidth="120.0" text="ReservationID" />
+                <TableColumn fx:id="colUser" prefWidth="120.0" text="Customer ID" />
+                <TableColumn fx:id="colDate" prefWidth="220.0" text="Data (Check-in/Check-out)" />
+            <TableColumn fx:id="colOld" prefWidth="120.0" text="Old status" />
+            <TableColumn fx:id="colNew" prefWidth="120.0" text="New status" />
             </columns>
         </TableView>
-
-        <!-- Butoni Shto Rezervim -->
-        <Button layoutX="600.0" layoutY="500.0" mnemonicParsing="false"
-                onAction="#handleAddReservation"
-                style="-fx-background-color: #3498db; -fx-text-fill: white; -fx-font-weight: bold;"
-                text="Shto Rezervim" />
+      <Button layoutX="14.0" layoutY="483.0" mnemonicParsing="false" onAction="#goBack" text="Button" />
 
     </children>
 </Pane>
