--- a/src/main/resources/views/maintenance.fxml
+++ b/src/main/resources/views/maintenance.fxml
@@ -7,42 +7,46 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MaintenanceController">
-   <children>
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="190.0" text="Tabela e mirembajtjes" />
-      <TableView fx:id="maintenanceTable" layoutX="14.0" layoutY="72.0" prefHeight="202.0" prefWidth="452.0">
-        <columns>
-          <TableColumn fx:id="maintenanceIdColumn" prefWidth="75.0" text="id" />
-          <TableColumn fx:id="roomIdColumn" prefWidth="75.0" text="room_id" />
-            <TableColumn fx:id="reportedByColumn" prefWidth="75.0" text="reported_by" />
-            <TableColumn fx:id="descriptionColumn" prefWidth="75.0" text="description" />
-            <TableColumn fx:id="statusColumn" prefWidth="75.0" text="status" />
-            <TableColumn fx:id="reportedAtColumn" prefWidth="75.0" text="reported_at" />
-        </columns>
-      </TableView>
-      <VBox layoutX="486.0" layoutY="72.0" prefHeight="128.0" prefWidth="100.0">
-         <children>
-            <Button fx:id="addbutton" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Add" />
-            <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="52.0" prefWidth="99.0" text="Delete" />
-            <Button fx:id="editButton" mnemonicParsing="false" prefHeight="49.0" prefWidth="100.0" text="Edit">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <TextField fx:id="searchField" layoutX="250.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Serach..." />
-      <ComboBox fx:id="searchByComboBox" layoutX="366.0" layoutY="14.0" prefHeight="26.0" prefWidth="99.0" promptText="Search By" visibleRowCount="6" />
-      <Button fx:id="searchButton" layoutX="486.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="99.0" text="Search" />
-      <HBox layoutX="14.0" layoutY="276.0" prefHeight="35.0" prefWidth="137.0">
-         <children>
-            <Label text="Total rows: 0" />
-         </children>
-      </HBox>
-      <Button fx:id="goback" layoutX="25.0" layoutY="320.0" mnemonicParsing="false" onAction="#handlebback" text="Back" />
-   </children>
+<AnchorPane prefHeight="600.0" prefWidth="896.0" style="-fx-background-color: linear-gradient(to bottom right, #f5f1ea, #d6c8b8);" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MaintenanceController">
+    <children>
+        <Label layoutX="20.0" layoutY="20.0" prefHeight="50.0" prefWidth="306.0" style="-fx-text-fill: #5a4a3c;" text="Tabela e Mirëmbajtjes">
+            <font>
+                <Font name="Segoe UI Semibold" size="28.0" />
+            </font>
+        </Label>
+
+        <TextField fx:id="searchField" layoutX="390.0" layoutY="35.0" prefHeight="30.0" prefWidth="150.0" promptText="Search..." style="-fx-background-radius: 12;" />
+        <ComboBox fx:id="searchByComboBox" layoutX="550.0" layoutY="35.0" prefHeight="30.0" prefWidth="130.0" promptText="Search By" style="-fx-background-radius: 12;" visibleRowCount="6" />
+        <Button fx:id="searchButton" layoutX="708.0" layoutY="35.0" prefHeight="30.0" prefWidth="130.0" style="-fx-background-color: #a1866f; -fx-text-fill: white; -fx-background-radius: 12;" text="Search" />
+
+        <TableView fx:id="maintenanceTable" layoutX="20.0" layoutY="90.0" prefHeight="350.0" prefWidth="722.0" style="-fx-background-radius: 12;">
+            <columns>
+                <TableColumn fx:id="maintenanceIdColumn" prefWidth="90.0" text="ID" />
+                <TableColumn fx:id="roomIdColumn" prefWidth="90.0" text="Room ID" />
+                <TableColumn fx:id="reportedByColumn" prefWidth="110.0" text="Reported By" />
+                <TableColumn fx:id="descriptionColumn" prefWidth="207.20001220703125" text="Description" />
+                <TableColumn fx:id="statusColumn" prefWidth="104.0" text="Status" />
+                <TableColumn fx:id="reportedAtColumn" prefWidth="119.20001220703125" text="Reported At" />
+            </columns>
+        </TableView>
+
+        <VBox layoutX="751.0" layoutY="120.0" prefHeight="180.0" prefWidth="130.0" spacing="15.0">
+            <children>
+                <Button fx:id="addbutton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #a1866f; -fx-text-fill: white; -fx-background-radius: 12;" text="Add" />
+                <Button fx:id="deleteButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #8c7b68; -fx-text-fill: white; -fx-background-radius: 12;" text="Delete" />
+                <Button fx:id="editButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="130.0" style="-fx-background-color: #b49a7a; -fx-text-fill: white; -fx-background-radius: 12;" text="Edit" />
+            </children>
+        </VBox>
+
+        <Label layoutX="20.0" layoutY="455.0" style="-fx-text-fill: #7d6e63;" text="Total rows: 0">
+            <font>
+                <Font name="Segoe UI" size="14.0" />
+            </font>
+        </Label>
+
+        <Button fx:id="goback" layoutX="20.0" layoutY="490.0" mnemonicParsing="false" onAction="#handlebback" prefHeight="38.0" prefWidth="100.0" style="-fx-background-color: #7e6a58; -fx-text-fill: white; -fx-background-radius: 12;" text="Back" />
+    </children>
 </AnchorPane>
