--- a/src/main/resources/views/signupStafi.fxml
+++ b/src/main/resources/views/signupStafi.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignupStafiController">
+<Pane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SignupStafiController">
    <children>
       <TextField fx:id="signupEmail" layoutX="237.0" layoutY="200.0" promptText="name@example.com" />
       <Label layoutX="227.0" layoutY="14.0" text="Signup STAFF">
